# ascii-art

./: .gitignore  Cargo.toml  README.md
src/: ascii_converter.rs  edge_detector.rs  image_loader.rs  main.rs  renderer.rs  terminal.rs
tests/: ascii_conversion.rs  cli_width.rs  edge_detection.rs
